@@ -16,7 +16,7 @@
    |          Zeev Suraski <zeev@zend.com>                                |
    +----------------------------------------------------------------------+
  */
-/* $Id: */
+/* $Id: php_variables.c,v 1.21.2.2 2001/04/06 02:09:43 sniper Exp $ */
 
 #include <stdio.h>
 #include "php.h"
@@ -217,7 +217,7 @@ SAPI_POST_HANDLER_FUNC(php_std_post_handler)
 
 void php_treat_data(int arg, char *str, zval* destArray ELS_DC PLS_DC SLS_DC)
 {
-	char *res = NULL, *var, *val;
+	char *res = NULL, *var, *val, *separator=NULL;
 	const char *c_var;
 	pval *array_ptr;
 	int free_buffer=0;
@@ -252,7 +252,7 @@ void php_treat_data(int arg, char *str, zval* destArray ELS_DC PLS_DC SLS_DC)
 		return;
 	}
 
-	if (arg == PARSE_GET) {		/* GET data */
+	if (arg == PARSE_GET) {					/* GET data */
 		c_var = SG(request_info).query_string;
 		if (c_var && *c_var) {
 			res = (char *) estrdup(c_var);
@@ -277,8 +277,18 @@ void php_treat_data(int arg, char *str, zval* destArray ELS_DC PLS_DC SLS_DC)
 		return;
 	}
 
-	var = php_strtok_r(res, ";&", &strtok_buf);
-
+	switch (arg) {
+		case PARSE_GET:
+		case PARSE_STRING:
+			separator = (char *) estrdup(PG(arg_separator).input);
+			break;
+		case PARSE_COOKIE:
+			separator = ";\0";
+			break;
+	}
+	
+	var = php_strtok_r(res, separator, &strtok_buf);
+	
 	while (var) {
 		val = strchr(var, '=');
 		if (val) { /* have a value */
@@ -289,8 +299,13 @@ void php_treat_data(int arg, char *str, zval* destArray ELS_DC PLS_DC SLS_DC)
 			val_len = php_url_decode(val, strlen(val));
 			php_register_variable_safe(var, val, val_len, array_ptr ELS_CC PLS_CC);
 		}
-		var = php_strtok_r(NULL, ";&", &strtok_buf);
+		var = php_strtok_r(NULL, separator, &strtok_buf);
 	}
+
+	if(arg != PARSE_COOKIE) {
+		efree(separator);
+	}
+
 	if (free_buffer) {
 		efree(res);
 	}
